--- a/style.css
+++ b/style.css
@@ -319,3 +319,26 @@ figcaption
 figure {
     display: inline-block; 
 }
+
+/* Dividir o bloco "Coordonnees" horizontalmente */
+#coordonnees {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+#coordonnees-texte {
+  flex: 1 1 60%;
+  min-width: 300px;
+}
+
+#moi {
+  flex: 1 1 35%;
+  text-align: center;
+}
+
+/* opcional: centralizar verticalmente a imagem */
+#moi img {
+  vertical-align: middle;
+}
