--- a/style.css
+++ b/style.css
@@ -206,8 +206,9 @@ nav a:active
   height: 450px;
   padding: -1px;
   border-radius: 0px;
-  margin-top: 10px;
+  margin-top: 5px;
   margin-left: 30px;
+  margin-right: 5px;
   object-fit: cover;
 }
 
