--- a/style.css
+++ b/style.css
@@ -202,8 +202,8 @@ nav a:active
 #me
 {
   border: none;
-  width: 450px;
-  height: 450px;
+  width: auto;
+  height: auto;
   padding: -1px;
   border-radius: 0px;
   margin-top: 5px;
