--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body
   margin: auto;
   padding-top: 25px;
   padding-bottom: 25px;
-  height: auto;
 }
 
 .main
@@ -127,6 +126,7 @@ a:active
 {
   position: sticky;
   top: 0;
+  height: auto
 }
 
 nav
