--- a/poemastyle.css
+++ b/poemastyle.css
@@ -40,3 +40,40 @@ h1 {
 .arrow:hover {
   color: #888;
 }
+
+.container {
+  width: 100%;
+  height: 100vh;
+}
+
+.toppane {
+  width: 100%;
+  height: 100px;
+  background-color: #4da6ff;
+}
+
+.leftpane {
+  width: 25%;
+  height: 100vh;
+  background-color: rosybrown;
+}
+
+.middlepane {
+  width: 50%;
+  height: 100vh;
+  background-color: royalblue;
+}
+
+.rightpane {
+  width: 25%;
+  height: 100vh;
+  background-color: yellow;
+}
+
+body {
+  margin: 0!important;
+}
+
+.d-flex {
+  display: flex;
+}
