--- a/poemastyle.css
+++ b/poemastyle.css
@@ -71,3 +71,10 @@ h1 {
 .d-flex {
   display: flex;
 }
+
+.arrow-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -50px 0 0 -50px;
+}
