--- a/poemastyle.css
+++ b/poemastyle.css
@@ -1,6 +1,6 @@
 body {
   background: #fff8dc;
-  font-family: 'Georgia', serif;
+  font-family: 'Brush Script MT', cursive;
   color: #222;
   text-align: center;
   margin: 0!important;
