--- a/poemastyle.css
+++ b/poemastyle.css
@@ -1,8 +1,8 @@
 body {
-  background: #fff8dc;
+  background: #2a42a1;
   font-family: 'Times New Roman', serif;
   font-size: 20px;
-  color: #222;
+  color: white;
   text-align: center;
   margin: 0!important;
   padding: 40px;
