--- a/poemastyle.css
+++ b/poemastyle.css
@@ -1,5 +1,5 @@
 body {
-  background: #2a42a1;
+  background: #030d36;
   font-family: 'Times New Roman', serif;
   font-size: 20px;
   color: white;
