--- a/poemastyle.css
+++ b/poemastyle.css
@@ -2,7 +2,7 @@ body {
   background: #030d36;
   font-family: 'Times New Roman', serif;
   font-size: 20px;
-  color: white;
+  color: rgb(183,202,212);
   text-align: center;
   margin: 0!important;
   padding: 40px;
