--- a/poemastyle.css
+++ b/poemastyle.css
@@ -33,7 +33,7 @@ h1 {
   margin-top: 25px;
   font-size: 2.5em;
   text-decoration: none;
-  color: #444;
+  color: rgb(183,202,212);
   cursor: pointer;
   transition: color 0.3s;
 }
