--- a/poemastyle.css
+++ b/poemastyle.css
@@ -23,6 +23,11 @@ h1 {
   margin: 0 0 40px 0;
 }
 
+.composicoes {
+  line-height: 1.7;
+  margin: 0 0 40px 0;
+}
+
 .nav-arrows {
   display: flex;
   justify-content: space-between;
