--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ h4
 }
 
 .nosee_link a {
-  color: #404040;             
+  color: DimGray;             
   text-decoration: none;        /* sem sublinhado */
 }
 
